<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_preferences">com.nicoga.taskPlanner.loginPreferences</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button_loggin">LOGIN</string>
    <string name="logo_description">Task Planner App</string>
    <string name="app_name">Task Planner</string>
    <string name="button_create_account">Create Account</string>
    <string name="field_validation_empty">Field can\'t be empty</string>
    <string name="field_validation_email">Please enter a valid email address</string>
    <string name="login_failed_dialog_title">Login failed</string>
    <string name="login_failed_dialog_message">Invalid email or password</string>

</resources>
